--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "homepage": "https://github.com/bromix/typescript-jest-example#readme",
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@types/uuid": "^8.3.4",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
